js&css/extension/www.youtube.com/appearance/sidebar/sidebar.css
/* ... */
html[it-livechat='collapsed'] #chat-container:not([it-activated])::before {
	content: 'Show live chat' !important;
}

html[it-livechat='collapsed'] #chat-container[it-activated]::before {
	content: 'Collapse live chat' !important;
}

html[it-livechat='collapsed'] #chat-container::before {
	font-family: inherit !important;
	font-size: 1.6rem !important;
	font-weight: 400 !important;

	display: flex !important;

	width: 100% !important;
	height: 48px !important;
	margin: 0 !important;

	color: var(--yt-spec-text-primary) !important;
	border-bottom: 1px solid var(--yt-spec-10-percent-layer) !important;

	justify-content: center !important;
	align-items: center !important;
}

html[it-livechat='collapsed'] #chat-container:not([it-activated]) > ytd-live-chat-frame#chat {
	display: none !important;
}

html[it-livechat='collapsed'][it-livechat='hidden'] ytd-live-chat-frame#chat {
  display: none !important;
}

html[it-livechat='collapsed'] 
#chat-container:not([it-activated])::before, 
#chat-container[it-activated]::before {
	background-color: #272727 !important;
	border-radius: 8px !important;
	cursor: pointer;
}


/*--------------------------------------------------------------
# HIDE PLAYLIST
--------------------------------------------------------------*/
html[it-hide-playlist='true'] ytd-playlist-panel-renderer#playlist,
/*--------------------------------------------------------------
# HIDE RELATED VIDEOS
--------------------------------------------------------------*/
html[it-related-videos='hidden'] #related,
html[it-related-videos='hidden'] #related #contents,
html[it-related-videos='hidden'] #related #dismissible,
html[it-related-videos='hidden'] #related > ytd-watch-next-secondary-results-renderer > #items,
html[data-page-type=video][it-related-videos='hidden'] ytd-compact-video-renderer,
html[data-page-type=video][it-related-videos='hidetabs'] #related #chips, 
html[it-hide-sidebar='true'] #related,
html[it-hide-sidebar='true'] #related > ytd-watch-next-secondary-results-renderer > #items,
html[it-hide-sidebar='true'] div#secondary div#panels,
html[it-hide-sidebar='true'] div#secondary div#donation-shelf {
	display: none !important
}
/* #1530 */
html[it-hide-sidebar='true'] div#secondary div#panels > *([target-id*='transcript']),
html[it-hide-sidebar='true'] div#secondary div#panels > *([target-id*='chapters']) {
	display: block !important
}
/* Ensure secondary has enough width for the transcript panel */
html[it-hide-sidebar='true'][it-transcript='true'] ytd-watch-flexy[flexy] #secondary.ytd-watch-flexy {
	width: fit-content !important;
	min-width: max(445px, 17vw) !important
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items:not([it-activated])::before {
	content: 'Show more' !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items[it-activated]::before {
	content: 'Show less' !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items::before {
	font-family: inherit !important;
	font-size: 1.6rem !important;
	font-weight: 400 !important;

	display: flex !important;

	width: 100% !important;
	height: 48px !important;
	margin: 0 !important;

	color: var(--yt-spec-text-primary) !important;
	border-bottom: 1px solid var(--yt-spec-10-percent-layer) !important;

	justify-content: center !important;
	align-items: center !important;
}

html[it-related-videos='collapsed'] #related > ytd-watch-next-secondary-results-renderer > #items:not([it-activated]) > * {
	visibility: hidden !important;
	pointer-events: none !important;
}

/*--------------------------------------------------------------
# NO PAGE MARGIN
--------------------------------------------------------------*/

html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #columns.ytd-watch-flexy,
html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #primary.ytd-watch-flexy,
html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #secondary.ytd-watch-flexy {
	max-width: 100% !important;
}
html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #below {
	margin-left: calc(4vh + 3vw - 40px) !important;
} 	

@media screen and (max-width: 2300px) and (min-width: 1250px) {
	html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #secondary.ytd-watch-flexy {
		margin-right: calc (-12px - 0.4vw - 0.4vh) !important;
	}
	html[data-page-type=video][it-no-page-margin='true'] ytd-watch-flexy:not([fullscreen]) #below {
		margin-left: max(18px, calc(19vw - 230px)) !important;
		margin-right:max(18px, calc(13vw - 130px)) !important;
		max-width: 1280px !important;
	} 
}
	
@media screen and (min-width: 2301px) {
	html[data-page-type=video][it-no-page-margin='true'][it-sidebar-left='true'] #secondary {
		left: 15px !important;
	}
	html[data-page-type=video][it-no-page-margin='true']:not([it-player-size='max_width']) #secondary {
		position:absolute !important;  right: 15px;
	}
	html[data-page-type=video][it-no-page-margin='true']:not([it-player-size='1080p']):not([it-player-size='1440p']):not([it-player-size='2160p']):not([it-player-size='custom']):not([it-player-size='max_width']) ytd-watch-flexy:not([fullscreen]) #primary.ytd-watch-flexy {
		max-width: 1280px !important;
	}
	html[data-page-type=video][it-no-page-margin='true']:not([it-player-size='1080p']):not([it-player-size='1440p']):not([it-player-size='2160p']):not([it-player-size='custom']):not([it-player-size='max_width']) ytd-watch-flexy:not([fullscreen]) #below {
		margin-left: 10px !important;
	}
}	

html[data-page-type=video][it-no-page-margin='true'] ytd-browse > ytd-two-column-browse-results-renderer {
	width: auto !important;
	max-width: auto !important;
}
/* ... */

